Changes in 1.0.9:
  o Client Changes:
    * A new dependency resolution method has been added which can be turned
      on by setting resolveLevel to 2 in your conarycfg:  If updating trove 'a'
      removes a dependency needed by trove 'b', attempt to update 'b' to
      solve the dependency issue.  This will allow 'conary update conary'
      to work as expected when you have conary-build installed, for example.
    * Switched to using more of optparse's capabilities, including --help
      messages.
    * One short option has been added, cvc -m for message.

  o Bug Fixes:
    * Recipes that use loadRecipe('foo') and rely on conary to look upstream
      to find their branch now work correctly when committing.
    * A bug affecting systems with multiple groups referencing the same troves,
      where the groups are out of sync, has been fixed.
    * the mirror client now correctly handles duplicate items returned in
      trove lists by older servers
    * A bug that caused the mirror client to loop indefinitely when
      doing a --full-trove-sync has been fixed
    * conary rq --trove-flags will now display redirect info even if you
      do not specify --troves (bug #877)
    * dep resolution now support --flavors --full-versions output (bug #751)
    * cvc merge no longer tracebacks if files were added on both upstream
      and on the shadow
    * admin web access for the server doesn't require write permission for
      operations which also require admin access (bug #833)
    * A bug that caused r.remove() in a group to fail if the trove being
      removed was recursively included from another group has been fixed.
    * Conary update tmpwatch -tmpwatch:debuginfo will now erase 
      tmpwatch:debuginfo.
    * An ordering bug that caused info packages to not be updated with their
      components has been fixed.
    * Updates will now happen in a more consistent order based on an
      alphabetic sort.