@@ -1,3 +1,9 @@
+Changes in @NEW@:
+  o Client Changes
+    * Given a system based on where you only installed !smp kernels, conary
+      would eventually start installing smp kernels on your system.  Conary 
+      now respects flavor affinity in this case.
+
 Changes in 1.0.9:
   o Client Changes:
     * A new dependency resolution method has been added which can be turned
